# hello-sycl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.cpp
.devcontainer/: Dockerfile  devcontainer.json
